[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Zones.gd" type="Script" id=1]
[ext_resource path="res://Resources/Graphics/Circle.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.3663

[node name="Zones" type="Node2D"]
script = ExtResource( 1 )

[node name="Zone" type="Area2D" parent="."]
position = Vector2( 1536.6, 701.631 )
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
monitorable = false
collision_layer = 16

[node name="Sprite" type="Sprite" parent="Zone"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone"]
shape = SubResource( 1 )

[node name="Zone2" type="Area2D" parent="."]
position = Vector2( 2165.89, 914.391 )
collision_layer = 16

[node name="Sprite" type="Sprite" parent="Zone2"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone2"]
shape = SubResource( 1 )

[node name="Zone3" type="Area2D" parent="."]
position = Vector2( 2183.87, 1381.86 )
collision_layer = 16

[node name="Sprite" type="Sprite" parent="Zone3"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone3"]
shape = SubResource( 1 )

[node name="Zone4" type="Area2D" parent="."]
position = Vector2( 2741.24, 1660.55 )
collision_layer = 16

[node name="Sprite" type="Sprite" parent="Zone4"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone4"]
shape = SubResource( 1 )

[node name="Zone5" type="Area2D" parent="."]
position = Vector2( 3274.64, 1447.79 )
collision_layer = 16

[node name="Sprite" type="Sprite" parent="Zone5"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone5"]
shape = SubResource( 1 )
[connection signal="area_entered" from="Zone" to="." method="_on_Zone_area_entered"]
[connection signal="body_entered" from="Zone" to="." method="_on_Zone_body_entered"]
[connection signal="body_entered" from="Zone2" to="." method="_on_Zone2_body_entered"]
[connection signal="body_entered" from="Zone3" to="." method="_on_Zone3_body_entered"]
[connection signal="body_entered" from="Zone4" to="." method="_on_Zone4_body_entered"]
[connection signal="body_entered" from="Zone5" to="." method="_on_Zone5_body_entered"]
